Caught up to first video

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -152,7 +152,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\ThirdParty\glad\src\glad.c" />
+    <ClCompile Include="Engine\Core\Assert.cpp" />
+    <ClCompile Include="Engine\Core\EventManager.cpp" />
+    <ClCompile Include="Engine\Core\Timer.cpp" />
+    <ClCompile Include="Engine\Graphics\Renderer.cpp" />
+    <ClCompile Include="Engine\Graphics\Texture.cpp" />
+    <ClCompile Include="Engine\Input\InputSystems.cpp" />
+    <ClCompile Include="Engine\Resources\ResourceManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="pch.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Engine\Core\EventManager.h" />
+    <ClInclude Include="Engine\Core\Factory.h" />
+    <ClInclude Include="Engine\Core\Singleton.h" />
+    <ClInclude Include="Engine\Core\System.h" />
+    <ClInclude Include="Engine\Core\Timer.h" />
+    <ClInclude Include="Engine\Graphics\Renderer.h" />
+    <ClInclude Include="Engine\Graphics\Texture.h" />
+    <ClInclude Include="Engine\Input\InputSystems.h" />
+    <ClInclude Include="Engine\Resources\Resource.h" />
+    <ClInclude Include="Engine\Resources\ResourceManager.h" />
+    <ClInclude Include="Engine\Resources\Texture.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
