--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -185,6 +185,11 @@
     <None Include="..\Build\Shaders\basic.frag" />
     <None Include="..\Build\Shaders\basic.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Build\Texture\llama.jpg" />
+    <Image Include="..\Build\Texture\rock.png" />
+    <Image Include="..\Build\Texture\wall.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
