--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -156,10 +156,13 @@
     <ClCompile Include="Engine\Core\EventManager.cpp" />
     <ClCompile Include="Engine\Core\File.cpp" />
     <ClCompile Include="Engine\Core\Timer.cpp" />
+    <ClCompile Include="Engine\Engine.cpp" />
     <ClCompile Include="Engine\Graphics\Program.cpp" />
     <ClCompile Include="Engine\Graphics\Renderer.cpp" />
     <ClCompile Include="Engine\Graphics\Texture.cpp" />
-    <ClCompile Include="Engine\Input\InputSystems.cpp" />
+    <ClCompile Include="Engine\Graphics\VertexArray.cpp" />
+    <ClCompile Include="Engine\Graphics\VertexIndexArray.cpp" />
+    <ClCompile Include="Engine\Input\InputSystem.cpp" />
     <ClCompile Include="Engine\Resources\ResourceManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp" />
@@ -171,15 +174,18 @@
     <ClInclude Include="Engine\Core\Singleton.h" />
     <ClInclude Include="Engine\Core\System.h" />
     <ClInclude Include="Engine\Core\Timer.h" />
+    <ClInclude Include="Engine\Engine.h" />
     <ClInclude Include="Engine\Graphics\Program.h" />
     <ClInclude Include="Engine\Graphics\Renderer.h" />
     <ClInclude Include="Engine\Graphics\Texture.h" />
-    <ClInclude Include="Engine\Input\InputSystems.h" />
+    <ClInclude Include="Engine\Graphics\VertexIndexArray.h" />
+    <ClInclude Include="Engine\Input\InputSystem.h" />
     <ClInclude Include="Engine\Math\Math.h" />
     <ClInclude Include="Engine\Resources\Resource.h" />
     <ClInclude Include="Engine\Resources\ResourceManager.h" />
     <ClInclude Include="Engine\Resources\Texture.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Build\Shaders\basic.frag" />
